--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,8 +11,8 @@ jobs:
     steps: 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOKR_USR }}
+        env:
+          username: ${{ vars.DOKR_USR }}
           password: ${{ secrets.DOKR_PASS }}
       - name: Checkout
         uses: actions/checkout@v2
