--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,9 +11,11 @@ jobs:
     steps: 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
+        with: 
+          password: ${{ secrets.DOKR_PASS }}
         env:
           username: ${{ vars.DOKR_USR }}
-          password: ${{ secrets.DOKR_PASS }}
+          
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test
