--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -7,6 +7,7 @@ on: [push]
 jobs: 
   test-lint: 
     name: Test and Lint
+    environment: DOKR
     runs-on: ubuntu-latest
     steps: 
       - name: Login to Docker Hub
