--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        env:
+        uses: docker/login-action@v3
+        with:
           username: ${{ vars.DOKR_USR }}
           password: ${{ secrets.DOKR_PASS }}
       - name: Checkout
