--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - "./app:/app"
-      - "dev-static-data:/vol/web"
+      - ./app:/app
+      - dev-static-data:/vol/web
     command: >
       sh -c "python manage.py wait_for_db &&
         python manage.py migrate &&
