--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - DB_NAME=devdb
       - DB_USER=devuser
       - DB_PASS=changeme
+      - DEBUG=1
     depends_on: 
       - db
   db:
@@ -31,4 +32,4 @@ services:
 
 volumes:
   dev-db-data:
-  dev-static-data:
+  dev-static-data: 
